--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./bin)
 
 set(CMAKE_CXX_FLAGS "-Wfatal-errors -Wall -W -Werror -Wfloat-equal -Wundef -Wendif-labels -Wshadow -pedantic-errors")
 
-FILE(GLOB SnowhouseSpecSourceFiles test/*.cpp)
+FILE(GLOB SnowhouseSpecSourceFiles example/*.cpp)
 add_executable(snowhouse-tests ${SnowhouseSpecSourceFiles})
 
 add_custom_command(TARGET snowhouse-tests
