--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories("${PROJECT_SOURCE_DIR}")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./bin)
 
-set(CMAKE_CXX_FLAGS "-Wfatal-errors -Wall -W -Werror -Wfloat-equal -Wundef -Wendif-labels -Wshadow -pedantic-errors")
+set(CMAKE_CXX_FLAGS "-Wfatal-errors -Wall -W -Wdeprecated -Werror -Wfloat-equal -Wundef -Wendif-labels -Wshadow -pedantic-errors")
 
 if(${cfg} STREQUAL "C++11") 
   if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
