Introduce three options: 1. SNOWHOUSE_IS_CPP11 replaces 'cfg' variable as this is what it was being used for. Default OFF. 2. SNOWHOUSE_BUILD_TESTS to allow for optional building of the Snowhouse tests. Default ON. 3. SNOWHOUSE_RUN_TESTS to allow for optional running of the Snowhouse tests. Default ON. Dependent on SNOWHOUSE_BUILD_TESTS.
Updated cross_compile.sh to reflect the change in 'cfg' variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(snowhouse)
 
 option(SNOWHOUSE_BUILD_TESTS    "Build the Snowhouse tests"                 ON)
 option(SNOWHOUSE_RUN_TESTS      "Run the Snowhouse tests"                   ON)
-option(SNOWHOUSE_IS_CPP11       "Whether to build this as a C++11 project"  ON)
+option(SNOWHOUSE_IS_CPP11       "Whether to build this as a C++11 project"  OFF)
 
 include_directories("${PROJECT_SOURCE_DIR}")
 
