--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ compiler:
  - gcc
  - clang
 
+before_install:
+ - sudo add-apt-repository ppa:kubuntu-ppa/backports -y
+ - sudo apt-get update -qq
+ - sudo apt-get install -qq cmake=2.8.12.2-0ubuntu1~ubuntu12.04.1~ppa2
+
 before_script:
  - cmake .
 
