--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,5 @@
 build_script:
- - cmake -G "Visual Studio 14"
+ - cmake -G "Visual Studio 14" -DSNOWHOUSE_RUN_TESTS=0
  - cmake --build .
+test_script:
+ - bin\Debug\snowhouse-tests.exe
