Output CMAKE_CXX_FLAGS as status message only
That way tools like ccmake do not get on your nerves
when pressing c.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ else()
   endif()
 endif()
 
-message(${CMAKE_CXX_FLAGS})
+message(STATUS ${CMAKE_CXX_FLAGS})
 
 if (SNOWHOUSE_BUILD_TESTS)
     FILE(GLOB SnowhouseSpecSourceFiles example/*.cpp)
