Clarify CMake output of compiler flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ else()
   endif()
 endif()
 
-message(STATUS ${CMAKE_CXX_FLAGS})
+message(STATUS "C++ compiler flags: ${CMAKE_CXX_FLAGS}")
 
 if (SNOWHOUSE_BUILD_TESTS)
     FILE(GLOB SnowhouseSpecSourceFiles example/*.cpp)
