--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,15 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./bin)
 
 if (MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /MP ")
+  if(SNOWHOUSE_CXX_STANDARD STREQUAL "C++98")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++98")
+  elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++03")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++03")
+  elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++11")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++11")
+  elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++14")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++14")
+  endif()
 else()
   # Assume GCC-style arguments
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wfatal-errors -Wall -W -Werror -Wfloat-equal -Wundef -Wendif-labels -Wshadow -pedantic-errors")
