--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,18 +9,24 @@ set_property(CACHE SNOWHOUSE_CXX_STANDARD PROPERTY STRINGS "C++98" "C++03" "C++1
 
 include_directories("${PROJECT_SOURCE_DIR}")
 
+if(SNOWHOUSE_CXX_STANDARD STREQUAL "C++98")
+  set(std_name "c++98")
+elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++03")
+  set(std_name "c++03")
+elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++11")
+  set(std_name "c++11")
+elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++14")
+  set(std_name "c++14")
+else()
+  message(WARNING "C++ standard \"${SNOWHOUSE_CXX_STANDARD}\" not known, falling back to default")
+endif()
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./bin)
 
 if (MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /MP ")
-  if(SNOWHOUSE_CXX_STANDARD STREQUAL "C++98")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++98")
-  elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++03")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++03")
-  elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++11")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++11")
-  elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++14")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++14")
+  if(DEFINED std_name)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:${std_name}")
   endif()
 else()
   # Assume GCC-style arguments
@@ -29,22 +35,8 @@ else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wdeprecated")
   endif()
 
-  if(SNOWHOUSE_CXX_STANDARD STREQUAL "C++98")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")
-  elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++03")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++03")
-  elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++11")
-    if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.7")
-      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-    else()
-      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-    endif()
-
-    if (CMAKE_HOST_APPLE AND (CMAKE_CXX_COMPILER_ID STREQUAL "Clang"))
-      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-    endif()
-  elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++14")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+  if(DEFINED std_name)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=${std_name}")
   endif()
 endif()
 
