Make snowhouse a CMake library
This moves headers into a new include/ directory
and turns off default running/building of tests.
Document the CMake-based installation.
Support for CMake < 3.0.0 is retained.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,15 @@ cmake_minimum_required(VERSION 2.8)
 
 project(snowhouse)
 
-option(SNOWHOUSE_BUILD_TESTS    "Build the Snowhouse tests"                 ON)
-option(SNOWHOUSE_RUN_TESTS      "Run the Snowhouse tests"                   ON)
+option(SNOWHOUSE_BUILD_TESTS    "Build the Snowhouse tests"                 OFF)
+option(SNOWHOUSE_RUN_TESTS      "Run the Snowhouse tests"                   OFF)
 set(SNOWHOUSE_CXX_STANDARD "C++03" CACHE STRING "The C++ standard the examples are compiled with")
 set_property(CACHE SNOWHOUSE_CXX_STANDARD PROPERTY STRINGS "C++98" "C++03" "C++11" "C++14")
 
-include_directories("${PROJECT_SOURCE_DIR}")
+if (NOT ${CMAKE_VERSION} VERSION_LESS "3.0.0")
+    add_library(snowhouse INTERFACE)
+    target_include_directories(snowhouse INTERFACE include)
+endif()
 
 if(SNOWHOUSE_CXX_STANDARD STREQUAL "C++98")
   set(std_name "c++98")
@@ -45,6 +48,11 @@ message(STATUS "C++ compiler flags: ${CMAKE_CXX_FLAGS}")
 if (SNOWHOUSE_BUILD_TESTS)
     FILE(GLOB SnowhouseSpecSourceFiles example/*.cpp)
     add_executable(snowhouse-tests ${SnowhouseSpecSourceFiles})
+    if (NOT ${CMAKE_VERSION} VERSION_LESS "3.0.0")
+        target_link_libraries(snowhouse-tests PRIVATE snowhouse)
+    else()
+        include_directories("${PROJECT_SOURCE_DIR}/include")
+    endif()
 endif()
 
 if (SNOWHOUSE_BUILD_TESTS AND SNOWHOUSE_RUN_TESTS)
