--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,19 +4,15 @@ project(snowhouse)
 
 option(SNOWHOUSE_BUILD_TESTS    "Build the Snowhouse tests"                 OFF)
 option(SNOWHOUSE_RUN_TESTS      "Run the Snowhouse tests"                   OFF)
-set(SNOWHOUSE_CXX_STANDARD "C++03" CACHE STRING "The C++ standard the examples are compiled with")
-set_property(CACHE SNOWHOUSE_CXX_STANDARD PROPERTY STRINGS "C++98" "C++03" "C++11" "C++14" "C++17")
+set(SNOWHOUSE_CXX_STANDARD "C++11" CACHE STRING "The C++ standard the examples are compiled with")
+set_property(CACHE SNOWHOUSE_CXX_STANDARD PROPERTY STRINGS "C++11" "C++14" "C++17")
 
 if (NOT ${CMAKE_VERSION} VERSION_LESS "3.0.0")
     add_library(snowhouse INTERFACE)
     target_include_directories(snowhouse INTERFACE include)
 endif()
 
-if(SNOWHOUSE_CXX_STANDARD STREQUAL "C++98")
-  set(std_name "c++98")
-elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++03")
-  set(std_name "c++03")
-elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++11")
+if(SNOWHOUSE_CXX_STANDARD STREQUAL "C++11")
   set(std_name "c++11")
 elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++14")
   set(std_name "c++14")
