--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,10 @@ elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++14")
   set(CMAKE_CXX_STANDARD 14)
 elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++17")
   set(CMAKE_CXX_STANDARD 17)
+elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++20")
+  set(CMAKE_CXX_STANDARD 20)
+elseif(SNOWHOUSE_CXX_STANDARD STREQUAL "C++23")
+  set(CMAKE_CXX_STANDARD 23)
 else()
   message(WARNING "C++ standard \"${SNOWHOUSE_CXX_STANDARD}\" not known, falling back to default")
 endif()
