--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         run:
           ${{ matrix.compiler-env }} util/build.sh ${{ matrix.cxx-standard }}
 
-  windows-build-test:
+  windows-2019-build-test:
     runs-on: windows-2019
     strategy:
       matrix:
@@ -57,6 +57,21 @@ jobs:
         uses: actions/checkout@v3
       - name: Let CMake generate build configuration
         run: cmake -G "Visual Studio 16 2019" -DSNOWHOUSE_RUN_TESTS=0 -DSNOWHOUSE_BUILD_TESTS=1 -DSNOWHOUSE_CXX_STANDARD=C++${{ matrix.cxx-standard }} .
+      - name: Build tests with MSVC and C++${{ matrix.cxx-standard }}
+        run: cmake --build .
+      - name: Run tests
+        run: bin\Debug\snowhouse-tests.exe
+
+  windows-2022-build-test:
+    runs-on: windows-2022
+    strategy:
+      matrix:
+        cxx-standard: ["11", "14", "17", "20", "23"]
+    steps:
+      - name: Clone and checkout commit
+        uses: actions/checkout@v3
+      - name: Let CMake generate build configuration
+        run: cmake -G "Visual Studio 17 2022" -DSNOWHOUSE_RUN_TESTS=0 -DSNOWHOUSE_BUILD_TESTS=1 -DSNOWHOUSE_CXX_STANDARD=C++${{ matrix.cxx-standard }} .
       - name: Build tests with MSVC and C++${{ matrix.cxx-standard }}
         run: cmake --build .
       - name: Run tests
